[package]
authors = ["lbeckman314 <liam@liambeckman.com>"]
description = "An mdbook backend for generating LaTeX and PDF documents."
edition = "2018"
license = "MPL-2.0"
name = "mdbook-latex"
readme = "README.md"
repository = "https://github.com/lbeckman314/mdbook-latex"
version = "0.1.24"
[dependencies]
mdbook = "0.3.5"
pulldown-cmark = "0.7.0"
pulldown-cmark-to-cmark = "*"
serde = "1.0.104"
serde_derive = "1.0.104"
tectonic = "0.1.12"

[dependencies.md2tex]
#path = "../md2tex"
version = "0.1.4"
git = "https://github.com/enaut/md2tex.git"
branch = "independent-book"
