[package]
name = "mdbook-latex"
version = "0.1.24"
authors = ["lbeckman314 <liam@liambeckman.com>"]
edition = "2018"
description = "An mdbook backend for generating LaTeX and PDF documents."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/lbeckman314/mdbook-latex"

[features]
default = ["latex", "pdf"]
latex = ["md2tex"]
pdf = ["md2tex", "tectonic"]

[dependencies]
env_logger = "0.7.1"
failure = "0.1.8"
md2tex = { version = "0.1.3", optional = true }
mdbook = "0.3.7"
serde = "1.0.111"
serde_derive = "1.0.111"
serde_json = "1.0.55"
structopt = "0.3.15"
tectonic = { version = "0.1.12", optional = true }

[dev-dependencies]
serde_json = "1.0.53"
tempdir = "0.3.7"

