[package]
name = "mdbook-latex"
version = "0.1.24"
authors = ["lbeckman314 <liam@liambeckman.com>"]
edition = "2021"
description = "An mdbook backend for generating LaTeX and PDF documents."
license = "MPL-2.0"
readme = "README.md"
repository = "https://github.com/lbeckman314/mdbook-latex"

[features]
default = ["latex", "pdf"]
latex = ["md2tex"]
pdf = ["latex", "tectonic"]

[dependencies]
env_logger = "0.9.0"
anyhow = "1.0.44"
md2tex = { git = "https://github.com/mateuszkj/md2tex.git", branch = "dev", optional = true }
mdbook = "0.4.13"
serde = { version = "1.0.130", features = ["derive"] }
serde_derive = "1.0.130"
serde_json = "1.0.68"
structopt = "0.3.25"
tectonic = { version = "0.8.0", optional = true }

[dev-dependencies]
serde_json = "1.0.68"
tempdir = "0.3.7"

